# microservices

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  run_api_gateway.py  test2.py  test_app.py  test_main.py
ai-tools/assistant/: README.md  main.py  pyproject.toml  requirements.txt
docs/: chatgpt_service.md  command_executor_service.md  logging_service.md
tests/: test_command_service.py  test_logging_service.py
top_secret/: api_gateway.py  chatgpt_service.py  cli_client.py  command_service.py  convert_command.py  logging_service.py  test.py
top_secret/api_gateway/: Dockerfile  main.py
top_secret/services/chatgpt_service/: Dockerfile  main.py  requirements.txt
top_secret/services/chatgpt_service/libraries/: openai_wrapper.py  openai_wrapper_function.py  openai_wrapper_json.py  openai_wrapper_stream.py
top_secret/services/command_executor_service/: Dockerfile  entrypoint.sh  main.py  requirements.txt
top_secret/services/function_calling_service/: Dockerfile  main.py  pyproject.toml  requirements.txt
top_secret/services/logging_service/: Dockerfile  main.py
top_secret/services/text_summarizer_service/: Dockerfile  main.py  pyproject.toml  requirements.txt
top_secret/services/texttospeech_service/: Dockerfile  main.py  pyproject.toml  requirements.txt
top_secret/services/webpage_scraper_service/: README.md  main.py  pyproject.toml
top_secret/services/webpage_summarizer_service/: Dockerfile  main.py  pyproject.toml  requirements.txt
top_secret/shared/: config.py  logger.py
