[tool.poetry]
name = "top-secret"
version = "0.1.0"
description = ""
authors = ["AiWaldoh <aiwaldoh@gptcoder.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
requests = "^2.31.0"
prompt-toolkit = "^3.0.43"
pexpect = "^4.9.0"
openai = "^1.6.1"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
fastapi = "^0.106.0"
uvicorn = "^0.25.0"
pytest-asyncio = "^0.23.2"
websockets = "^12.0"
paramiko = "^3.4.0"
asyncssh = "^2.14.2"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"

[tool.poetry.scripts]
top-secret-cli = "top_secret.cli:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
autopep8 = "^2.0.4"
black = "^23.12.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.26.0"
respx = "^0.20.2"
pytest-cov = "^4.1.0"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
