[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["waldoh <waldoh@waldohlinux.lan>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyaudio = "^0.2.14"
pvporcupine = "^3.0.1"
vosk = "^0.3.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
