[tool.poetry]
name = "texttospeech-service"
version = "0.1.0"
description = ""
authors = ["waldoh <waldoh@waldohlinux.lan>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
pydub = "^0.25.1"
uvicorn = "^0.25.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
